Update title and emoji picker height in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>KASU V13 (Date Backup)</title>
+    <title>KASU V14 (Mega Emoji Pack)</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
@@ -109,7 +109,7 @@
         .cat-label { font-size: 0.7rem; font-weight: 600; color: var(--text-muted); }
 
         /* Emoji Picker Popup */
-        .emoji-picker-container { display: none; position: absolute; bottom: 60px; left: 0; width: 100%; background: var(--surface); border: 1px solid var(--border); border-radius: 16px; padding: 10px; box-shadow: var(--shadow); z-index: 500; height: 200px; overflow-y: auto; grid-template-columns: repeat(6, 1fr); gap: 5px; }
+        .emoji-picker-container { display: none; position: absolute; bottom: 60px; left: 0; width: 100%; background: var(--surface); border: 1px solid var(--border); border-radius: 16px; padding: 10px; box-shadow: var(--shadow); z-index: 500; height: 300px; overflow-y: auto; grid-template-columns: repeat(6, 1fr); gap: 5px; }
         .emoji-picker-container.show { display: grid; }
         .emoji-btn-item { font-size: 1.4rem; background: var(--input-bg); border: none; padding: 8px; border-radius: 8px; cursor: pointer; transition: 0.1s; }
         .emoji-btn-item:active { transform: scale(0.9); background: var(--primary); }
@@ -383,10 +383,29 @@
     <script>
         // --- CONSTANTS ---
         const EMOJI_LIST = [
-            '🍕','🍔','🍟','🍿','☕','🍺','🛒','🛍️','👔','👗','🚕','🚌','✈️','⛽',
-            '🏠','💡','⚡','🚿','📞','💻','📱','🎮','🎬','🎵','📚','🎓','💊','🏋️',
-            '⚽','🎨','🐶','🎁','💰','🏦','💸','🔧','🔨','🧹','🍼','👶','💼','🎉',
-            '❤️','🏥','🦷','👓','🕰️','📅','🔒','🔑','🏳️','🏁','✂️','🖊️','📝','📦'
+            '💰','💸','🏦','💳','🪙','💵','💶','💷','💴','🧾','📈','📉','📊','🏧','🤑',
+            '🍕','🍔','🍟','🌭','🍿','🥞','🥓','🥩','🍗','🥐','🥯','🍞','🥖','🧀','🥗',
+            '🍜','🍝','🍣','🍤','🍱','🥟','🍛','🍲','🥘','🌮','🌯','🥙','🥚','🍳','🧈',
+            '🍦','🍧','🍨','🍩','🍪','🎂','🍰','🧁','🥧','🍫','🍬','🍭','☕','🍵','🥤',
+            '🍺','🍻','🍷','🍸','🍹','🍾','🍶','🥛','🥦','🥬','🥒','🌽','🥕','🥔','🍠',
+            '🍎','🍌','🍇','🍊','🍋','🍉','🍈','🍒','🍓','🍍','🥥','🥝','🍅','🥑','🍆',
+            '🚗','🚕','🚙','🚌','🚎','🏎️','🚓','🚑','🚒','🚐','🚚','🚛','🚜','🚲','🛵',
+            '🚂','🚆','🚄','🚅','🚈','🚇','🚝','🚋','🚊','✈️','🛫','🛬','🚁','🚢','🚤',
+            '⚓','⛽','🚧','🚦','🛑','🗺️','🌍','🏖️','🏕️','⛺','🏠','🏡','🏢','🏥','🏨',
+            '🛍️','🛒','🎁','🎀','🕶️','👓','👔','👕','👖','🧣','🧤','🧥','🧦','👗','👘',
+            '👙','👚','👛','👜','👝','🎒','👞','👟','🥾','🥿','👠','👡','👢','👑','💍',
+            '💄','💎','💈','✂️','🛁','🧼','🧽','🧴','🧵','🧶','🛌','🛋️','🚪','🔑','🔒',
+            '🎮','👾','🎲','🧩','🎰','🎳','🎯','🎱','🎨','🎭','🎪','🎫','🎟️','🎬','🎧',
+            '🎤','🎹','🥁','🎷','🎺','🎸','🎻','🎼','🎵','🎶','📷','📸','📹','🎥','📻',
+            '📺','💻','🖥️','🖨️','⌨️','🖱️','📱','🔋','🔌','💡','🔦','🕯️','📚','📖','📕',
+            '🎓','📝','🖊️','✏️','💼','📁','📂','📅','🗓️','📌','📎','📏','📐','✂️','🗑️',
+            '🐶','🐱','🐭','🐹','🐰','🦊','🐻','🐼','🐨','🐯','🦁','🐮','🐷','🐸','🐵',
+            '🐔','🐧','🐦','🐤','🦆','🦅','🦉','🦇','🐺','🐗','🐴','🦄','🐝','🐛','🦋',
+            '🏥','💊','🩺','💉','🩸','🧬','🩹','🦠','🌡️','🏋️','🤸','⛹️','🤺','🤼','🏌️',
+            '🏇','🧘','🏄','🏊','🤽','🚣','🧗','🚴','🚵','🏆','🥇','🥈','🥉','🏅','🎖️',
+            '⚽','🏀','🏈','⚾','🥎','🎾','🏐','🏉','🎱','🏓','🏸','🥅','🏒','🏑','🏏',
+            '❤','🧡','💛','💚','💙','💜','🖤','🤍','🤎','💔','🔥','💧','⚡','❄️','🌈',
+            '⭐','🌟','✨','💫','🌙','☀️','☁️','⛈️','☂️','☔','⛱️','⛄','☄️','💥','💢'
         ];
 
         // --- DATA STORE ---
