--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>KASU V14 (Mega Emoji Pack)</title>
+    <title>KASU V15</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         :root {
-            /* Palette */
-            --primary: #6366f1;
-            --primary-grad: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%);
+            /* Brand Colors derived from Logo (Cyan -> Purple) */
+            --primary: #8b5cf6;
+            --primary-grad: linear-gradient(135deg, #06b6d4 0%, #7c3aed 100%); 
+            
             --bg: #f8fafc;
             --surface: #ffffff;
             --surface-glass: rgba(255, 255, 255, 0.95);
@@ -66,9 +67,17 @@
         #app-wrapper { display: none; height: 100%; overflow-y: auto; padding-bottom: 120px; padding-top: 10px; scroll-behavior: smooth; }
         .container { max-width: 500px; margin: 0 auto; padding: 20px; }
         
-        header { margin-bottom: 20px; }
-        .greeting { font-size: 0.9rem; color: var(--text-muted); font-weight: 500; }
-        .brand { font-size: 1.6rem; font-weight: 800; background: var(--primary-grad); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+        /* HEADER with LOGO */
+        header { margin-bottom: 25px; display: flex; align-items: center; justify-content: space-between; }
+        .brand-container { display: flex; align-items: center; gap: 12px; }
+        .app-logo { 
+            width: 45px; height: 45px; 
+            border-radius: 12px; 
+            object-fit: cover; 
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        }
+        .greeting { font-size: 0.85rem; color: var(--text-muted); font-weight: 500; }
+        .brand { font-size: 1.6rem; font-weight: 800; background: var(--primary-grad); -webkit-background-clip: text; -webkit-text-fill-color: transparent; letter-spacing: -0.5px; }
 
         /* --- COMPONENTS --- */
         .card { background: var(--surface); padding: 24px; border-radius: var(--radius); box-shadow: var(--shadow); margin-bottom: 20px; border: 1px solid var(--border); }
@@ -83,7 +92,7 @@
         .filter-container { overflow-x: auto; white-space: nowrap; padding-bottom: 10px; margin-bottom: 10px; -webkit-overflow-scrolling: touch; scrollbar-width: none; }
         .filter-container::-webkit-scrollbar { display: none; }
         .filter-chip { display: inline-block; padding: 8px 16px; border-radius: 20px; background: var(--input-bg); color: var(--text-muted); font-size: 0.85rem; font-weight: 600; margin-right: 8px; cursor: pointer; border: 1px solid transparent; transition: 0.2s; }
-        .filter-chip.active { background: var(--primary); color: white; box-shadow: 0 4px 10px rgba(99, 102, 241, 0.3); }
+        .filter-chip.active { background: var(--primary); color: white; box-shadow: 0 4px 10px rgba(6, 182, 212, 0.3); }
         .date-range-box { display: none; gap: 10px; margin-bottom: 15px; animation: fadeIn 0.3s; }
         .date-range-box.show { display: flex; }
         .date-input { flex: 1; padding: 10px; border-radius: 12px; border: 1px solid var(--border); background: var(--surface); color: var(--text); font-family: 'Poppins'; }
@@ -95,7 +104,7 @@
         /* Buttons */
         .btn { width: 100%; padding: 18px; border: none; border-radius: 18px; font-weight: 600; font-size: 1rem; cursor: pointer; transition: 0.2s; display: flex; justify-content: center; align-items: center; gap: 8px; }
         .btn:active { transform: scale(0.98); }
-        .btn-primary { background: var(--primary-grad); color: white; box-shadow: 0 4px 15px rgba(99, 102, 241, 0.4); }
+        .btn-primary { background: var(--primary-grad); color: white; box-shadow: 0 4px 15px rgba(124, 58, 237, 0.4); }
         .btn-ghost { background: transparent; color: var(--text-muted); width: auto; padding: 5px 10px; font-size: 0.9rem; }
         .btn-icon-only { width: 36px; height: 36px; border-radius: 50%; display: flex; align-items: center; justify-content: center; background: var(--input-bg); color: var(--text); border: none; cursor: pointer; transition: 0.2s; }
         .btn-icon-only:active { background: var(--primary); color: white; }
@@ -127,7 +136,7 @@
         .tab-icon { font-size: 1.6rem; transition: 0.3s; display: block; }
         .tab-btn.active { color: var(--primary); }
         .tab-btn.active .tab-icon { transform: translateY(-5px); }
-        .tab-add-btn { background: var(--primary-grad); color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 2rem; box-shadow: 0 10px 25px rgba(99, 102, 241, 0.5); margin-top: -40px; border: 6px solid var(--bg); transition: 0.2s; }
+        .tab-add-btn { background: var(--primary-grad); color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 2rem; box-shadow: 0 10px 25px rgba(124, 58, 237, 0.5); margin-top: -40px; border: 6px solid var(--bg); transition: 0.2s; }
         .tab-add-btn:active { transform: scale(0.9); }
 
         /* Mode Toggle */
@@ -148,7 +157,7 @@
     <div id="toast-container"></div>
 
     <div id="auth-overlay">
-        <div style="font-size:3rem; margin-bottom:10px;">🔒</div>
+        <img src="1000027449.jpg" style="width:80px; height:80px; border-radius:20px; margin-bottom:20px; box-shadow:0 10px 30px rgba(0,0,0,0.2);">
         <h2 style="font-size:1.5rem;">Welcome Back</h2>
         <div class="pin-dots" id="pinDisplay"></div>
         <div class="numpad">
@@ -169,10 +178,13 @@
 
     <div id="app-wrapper">
         <div class="container">
-            <header class="flex-between">
-                <div>
-                    <div class="greeting" id="greeting">Hello</div>
-                    <div class="brand">KASU</div>
+            <header>
+                <div class="brand-container">
+                    <img src="1000027449.jpg" class="app-logo" alt="Logo">
+                    <div>
+                        <div class="greeting" id="greeting">Hello</div>
+                        <div class="brand">KASU</div>
+                    </div>
                 </div>
                 <button onclick="toggleTheme()" style="background:none; border:none; font-size:1.4rem; cursor:pointer; padding:5px;">🌗</button>
             </header>
